--- a/packages/website/src/css/custom.css
+++ b/packages/website/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #1d817b;
+  --ifm-color-primary-dark: #1a746f;
+  --ifm-color-primary-darker: #196e69;
+  --ifm-color-primary-darkest: #145a56;
+  --ifm-color-primary-light: #208e87;
+  --ifm-color-primary-lighter: #21948d;
+  --ifm-color-primary-lightest: #26a8a0;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #25a7a0;
+  --ifm-color-primary-dark: #219690;
+  --ifm-color-primary-darker: #1f8e88;
+  --ifm-color-primary-darkest: #1a7570;
+  --ifm-color-primary-light: #29b8b0;
+  --ifm-color-primary-lighter: #2bc0b8;
+  --ifm-color-primary-lightest: #37d3ca;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
